# fixed_point

./: .gitignore  CMakeLists.txt  README.md  fpConfig.h.in  test.cpp
.github/workflows/: check_googletest.yml
fixed_point/: CMakeLists.txt  FixedPoint.hpp
tests/: arithmetic.cpp
